fix: code block spacing

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -558,8 +558,9 @@ input {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
 }
-.remark-code-title + pre > .code-block{
-    display: grid
+.remark-code-title + pre > .code-block {
+    padding-top: 1rem;
+    display: grid;
 }
 /* Code Line Highlight */
 .mdx-marker {
